// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics|SyntaxHighlighter bash 1`] = `
.emotion-2 {
  overflow-y: auto;
  overflow-x: auto;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-3 {
  position: relative;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 0;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-2"
    data-simplebar="true"
  >
    <div
      class="simplebar-wrapper"
    >
      <div
        class="simplebar-height-auto-observer-wrapper"
      >
        <div
          class="simplebar-height-auto-observer"
        />
      </div>
      <div
        class="simplebar-mask"
      >
        <div
          class="simplebar-offset"
        >
          <div
            class="simplebar-content"
          >
            <pre
              class="hljs emotion-1"
            >
              <code
                class="emotion-0"
              >
                npx npm-check-updates 
                <span
                  class="token string"
                >
                  '/storybook/'
                </span>
                 -u 
                <span
                  class="token operator"
                >
                  &&
                </span>
                 yarn
              </code>
            </pre>
          </div>
        </div>
      </div>
      <div
        class="simplebar-placeholder"
      />
    </div>
    <div
      class="simplebar-track simplebar-horizontal"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
    <div
      class="simplebar-track simplebar-vertical"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|SyntaxHighlighter bordered & copy-able 1`] = `
.emotion-5 {
  position: relative;
  overflow: hidden;
  border: 1px solid rgba(0,0,0,.1);
  background: #FFFFFF;
}

.emotion-2 {
  overflow-y: auto;
  overflow-x: auto;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 10px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-4 {
  position: absolute;
  bottom: 0;
  right: 0;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #FFFFFF;
}

.emotion-3 {
  border: 0 none;
  padding: 4px 10px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #333333;
  background: #FFFFFF;
  font-size: 12px;
  line-height: 16px;
  font-weight: 700;
  border-top: 1px solid rgba(0,0,0,.1);
  border-left: 1px solid rgba(0,0,0,.1);
  margin-left: -1px;
  border-radius: 4px 0 0 0;
}

.emotion-3:not(:last-child) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-3 + * {
  border-left: 1px solid rgba(0,0,0,.1);
  border-radius: 0;
}

.emotion-3:focus {
  box-shadow: #1EA7FD 0 -3px 0 0 inset;
  outline: 0 none;
}

<div
  class="emotion-5"
>
  <div
    class="emotion-2"
    data-simplebar="true"
  >
    <div
      class="simplebar-wrapper"
    >
      <div
        class="simplebar-height-auto-observer-wrapper"
      >
        <div
          class="simplebar-height-auto-observer"
        />
      </div>
      <div
        class="simplebar-mask"
      >
        <div
          class="simplebar-offset"
        >
          <div
            class="simplebar-content"
          >
            <pre
              class="hljs emotion-1"
            >
              <code
                class="emotion-0"
              >
                <span
                  class="token keyword"
                >
                  import
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 Good
                <span
                  class="token punctuation"
                >
                  ,
                </span>
                 Things 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                 
                <span
                  class="token keyword"
                >
                  from
                </span>
                 
                <span
                  class="token string"
                >
                  'life'
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  const
                </span>
                 
                <span
                  class="token function-variable function"
                >
                  result
                </span>
                 
                <span
                  class="token operator"
                >
                  =
                </span>
                 
                <span
                  class="token punctuation"
                >
                  (
                </span>
                <span
                  class="token punctuation"
                >
                  )
                </span>
                 
                <span
                  class="token operator"
                >
                  =&gt;
                </span>
                 
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Good
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Things
                  </span>
                   
                  <span
                    class="token punctuation"
                  >
                    /&gt;
                  </span>
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Good
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  export
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 result 
                <span
                  class="token keyword"
                >
                  as
                </span>
                 
                <span
                  class="token keyword"
                >
                  default
                </span>
                 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                

              </code>
            </pre>
          </div>
        </div>
      </div>
      <div
        class="simplebar-placeholder"
      />
    </div>
    <div
      class="simplebar-track simplebar-horizontal"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
    <div
      class="simplebar-track simplebar-vertical"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
  </div>
  <div
    class="emotion-4"
  >
    <button
      class="emotion-3"
    >
      Copy
    </button>
  </div>
</div>
`;

exports[`Storyshots Basics|SyntaxHighlighter jsx 1`] = `
.emotion-2 {
  overflow-y: auto;
  overflow-x: auto;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-3 {
  position: relative;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 0;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-2"
    data-simplebar="true"
  >
    <div
      class="simplebar-wrapper"
    >
      <div
        class="simplebar-height-auto-observer-wrapper"
      >
        <div
          class="simplebar-height-auto-observer"
        />
      </div>
      <div
        class="simplebar-mask"
      >
        <div
          class="simplebar-offset"
        >
          <div
            class="simplebar-content"
          >
            <pre
              class="hljs emotion-1"
            >
              <code
                class="emotion-0"
              >
                <span
                  class="token keyword"
                >
                  import
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 Good
                <span
                  class="token punctuation"
                >
                  ,
                </span>
                 Things 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                 
                <span
                  class="token keyword"
                >
                  from
                </span>
                 
                <span
                  class="token string"
                >
                  'life'
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  const
                </span>
                 
                <span
                  class="token function-variable function"
                >
                  result
                </span>
                 
                <span
                  class="token operator"
                >
                  =
                </span>
                 
                <span
                  class="token punctuation"
                >
                  (
                </span>
                <span
                  class="token punctuation"
                >
                  )
                </span>
                 
                <span
                  class="token operator"
                >
                  =&gt;
                </span>
                 
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Good
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Things
                  </span>
                   
                  <span
                    class="token attr-name"
                  >
                    all
                  </span>
                  <span
                    class="token script language-javascript"
                  >
                    <span
                      class="token script-punctuation punctuation"
                    >
                      =
                    </span>
                    <span
                      class="token punctuation"
                    >
                      {
                    </span>
                    <span
                      class="token boolean"
                    >
                      true
                    </span>
                    <span
                      class="token punctuation"
                    >
                      }
                    </span>
                  </span>
                   
                  <span
                    class="token punctuation"
                  >
                    /&gt;
                  </span>
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Good
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  export
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 result 
                <span
                  class="token keyword"
                >
                  as
                </span>
                 
                <span
                  class="token keyword"
                >
                  default
                </span>
                 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                

              </code>
            </pre>
          </div>
        </div>
      </div>
      <div
        class="simplebar-placeholder"
      />
    </div>
    <div
      class="simplebar-track simplebar-horizontal"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
    <div
      class="simplebar-track simplebar-vertical"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|SyntaxHighlighter padded 1`] = `
.emotion-2 {
  overflow-y: auto;
  overflow-x: auto;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 10px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-3 {
  position: relative;
  overflow: hidden;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-2"
    data-simplebar="true"
  >
    <div
      class="simplebar-wrapper"
    >
      <div
        class="simplebar-height-auto-observer-wrapper"
      >
        <div
          class="simplebar-height-auto-observer"
        />
      </div>
      <div
        class="simplebar-mask"
      >
        <div
          class="simplebar-offset"
        >
          <div
            class="simplebar-content"
          >
            <pre
              class="hljs emotion-1"
            >
              <code
                class="emotion-0"
              >
                <span
                  class="token keyword"
                >
                  import
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 Good
                <span
                  class="token punctuation"
                >
                  ,
                </span>
                 Things 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                 
                <span
                  class="token keyword"
                >
                  from
                </span>
                 
                <span
                  class="token string"
                >
                  'life'
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  const
                </span>
                 
                <span
                  class="token function-variable function"
                >
                  result
                </span>
                 
                <span
                  class="token operator"
                >
                  =
                </span>
                 
                <span
                  class="token punctuation"
                >
                  (
                </span>
                <span
                  class="token punctuation"
                >
                  )
                </span>
                 
                <span
                  class="token operator"
                >
                  =&gt;
                </span>
                 
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Good
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Things
                  </span>
                   
                  <span
                    class="token punctuation"
                  >
                    /&gt;
                  </span>
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Good
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  export
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 result 
                <span
                  class="token keyword"
                >
                  as
                </span>
                 
                <span
                  class="token keyword"
                >
                  default
                </span>
                 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                

              </code>
            </pre>
          </div>
        </div>
      </div>
      <div
        class="simplebar-placeholder"
      />
    </div>
    <div
      class="simplebar-track simplebar-horizontal"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
    <div
      class="simplebar-track simplebar-vertical"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|SyntaxHighlighter showLineNumbers 1`] = `
.emotion-2 {
  overflow-y: auto;
  overflow-x: auto;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-3 {
  position: relative;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 0;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-2"
    data-simplebar="true"
  >
    <div
      class="simplebar-wrapper"
    >
      <div
        class="simplebar-height-auto-observer-wrapper"
      >
        <div
          class="simplebar-height-auto-observer"
        />
      </div>
      <div
        class="simplebar-mask"
      >
        <div
          class="simplebar-offset"
        >
          <div
            class="simplebar-content"
          >
            <pre
              class="hljs emotion-1"
            >
              <code>
                <span
                  class="react-syntax-highlighter-line-number"
                >
                  1

                </span>
                <span
                  class="react-syntax-highlighter-line-number"
                >
                  2

                </span>
                <span
                  class="react-syntax-highlighter-line-number"
                >
                  3

                </span>
                <span
                  class="react-syntax-highlighter-line-number"
                >
                  4

                </span>
                <span
                  class="react-syntax-highlighter-line-number"
                >
                  5

                </span>
              </code>
              <code
                class="emotion-0"
              >
                <span
                  class="token keyword"
                >
                  import
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 Good
                <span
                  class="token punctuation"
                >
                  ,
                </span>
                 Things 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                 
                <span
                  class="token keyword"
                >
                  from
                </span>
                 
                <span
                  class="token string"
                >
                  'life'
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  const
                </span>
                 
                <span
                  class="token function-variable function"
                >
                  result
                </span>
                 
                <span
                  class="token operator"
                >
                  =
                </span>
                 
                <span
                  class="token punctuation"
                >
                  (
                </span>
                <span
                  class="token punctuation"
                >
                  )
                </span>
                 
                <span
                  class="token operator"
                >
                  =&gt;
                </span>
                 
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Good
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Things
                  </span>
                   
                  <span
                    class="token punctuation"
                  >
                    /&gt;
                  </span>
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Good
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  export
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 result 
                <span
                  class="token keyword"
                >
                  as
                </span>
                 
                <span
                  class="token keyword"
                >
                  default
                </span>
                 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                

              </code>
            </pre>
          </div>
        </div>
      </div>
      <div
        class="simplebar-placeholder"
      />
    </div>
    <div
      class="simplebar-track simplebar-horizontal"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
    <div
      class="simplebar-track simplebar-vertical"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|SyntaxHighlighter story 1`] = `
.emotion-2 {
  overflow-y: auto;
  overflow-x: auto;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-3 {
  position: relative;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 0;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-2"
    data-simplebar="true"
  >
    <div
      class="simplebar-wrapper"
    >
      <div
        class="simplebar-height-auto-observer-wrapper"
      >
        <div
          class="simplebar-height-auto-observer"
        />
      </div>
      <div
        class="simplebar-mask"
      >
        <div
          class="simplebar-offset"
        >
          <div
            class="simplebar-content"
          >
            <pre
              class="hljs emotion-1"
            >
              <code
                class="emotion-0"
              >
                <span
                  class="token keyword"
                >
                  import
                </span>
                 React 
                <span
                  class="token keyword"
                >
                  from
                </span>
                 
                <span
                  class="token string"
                >
                  'react'
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                

                <span
                  class="token keyword"
                >
                  import
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 storiesOf 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                 
                <span
                  class="token keyword"
                >
                  from
                </span>
                 
                <span
                  class="token string"
                >
                  '@storybook/react'
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                

                <span
                  class="token keyword"
                >
                  import
                </span>
                 
                <span
                  class="token punctuation"
                >
                  {
                </span>
                 styled 
                <span
                  class="token punctuation"
                >
                  }
                </span>
                 
                <span
                  class="token keyword"
                >
                  from
                </span>
                 
                <span
                  class="token string"
                >
                  '@storybook/theming'
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  import
                </span>
                 Heading 
                <span
                  class="token keyword"
                >
                  from
                </span>
                 
                <span
                  class="token string"
                >
                  './heading'
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token keyword"
                >
                  const
                </span>
                 Holder 
                <span
                  class="token operator"
                >
                  =
                </span>
                 styled
                <span
                  class="token punctuation"
                >
                  .
                </span>
                <span
                  class="token function"
                >
                  div
                </span>
                <span
                  class="token punctuation"
                >
                  (
                </span>
                <span
                  class="token punctuation"
                >
                  {
                </span>
                
  margin
                <span
                  class="token punctuation"
                >
                  :
                </span>
                 
                <span
                  class="token number"
                >
                  10
                </span>
                <span
                  class="token punctuation"
                >
                  ,
                </span>
                
  border
                <span
                  class="token punctuation"
                >
                  :
                </span>
                 
                <span
                  class="token string"
                >
                  '1px dashed deepskyblue'
                </span>
                <span
                  class="token punctuation"
                >
                  ,
                </span>
                
  
                <span
                  class="token comment"
                >
                  // overflow: 'hidden',
                </span>
                

                <span
                  class="token punctuation"
                >
                  }
                </span>
                <span
                  class="token punctuation"
                >
                  )
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                


                <span
                  class="token function"
                >
                  storiesOf
                </span>
                <span
                  class="token punctuation"
                >
                  (
                </span>
                <span
                  class="token string"
                >
                  'Basics|Heading'
                </span>
                <span
                  class="token punctuation"
                >
                  ,
                </span>
                 module
                <span
                  class="token punctuation"
                >
                  )
                </span>
                <span
                  class="token punctuation"
                >
                  .
                </span>
                <span
                  class="token function"
                >
                  add
                </span>
                <span
                  class="token punctuation"
                >
                  (
                </span>
                <span
                  class="token string"
                >
                  'types'
                </span>
                <span
                  class="token punctuation"
                >
                  ,
                </span>
                 
                <span
                  class="token punctuation"
                >
                  (
                </span>
                <span
                  class="token punctuation"
                >
                  )
                </span>
                 
                <span
                  class="token operator"
                >
                  =&gt;
                </span>
                 
                <span
                  class="token punctuation"
                >
                  (
                </span>
                
  
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    div
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
            
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Holder
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
              
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Heading
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  DEFAULT WITH ALL CAPS
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Heading
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
            
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Holder
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
            
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Holder
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
              
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Heading
                  </span>
                   
                  <span
                    class="token attr-name"
                  >
                    sub
                  </span>
                  <span
                    class="token attr-value"
                  >
                    <span
                      class="token punctuation"
                    >
                      =
                    </span>
                    <span
                      class="token punctuation"
                    >
                      "
                    </span>
                    With a great sub
                    <span
                      class="token punctuation"
                    >
                      "
                    </span>
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  THIS LONG DEFAULT WITH ALL CAPS & SUB
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Heading
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
            
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Holder
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
            
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Holder
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
              
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Heading
                  </span>
                   
                  <span
                    class="token attr-name"
                  >
                    type
                  </span>
                  <span
                    class="token attr-value"
                  >
                    <span
                      class="token punctuation"
                    >
                      =
                    </span>
                    <span
                      class="token punctuation"
                    >
                      "
                    </span>
                    page
                    <span
                      class="token punctuation"
                    >
                      "
                    </span>
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  page type
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Heading
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
            
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Holder
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
            
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Holder
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
              
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;
                    </span>
                    Heading
                  </span>
                   
                  <span
                    class="token attr-name"
                  >
                    type
                  </span>
                  <span
                    class="token attr-value"
                  >
                    <span
                      class="token punctuation"
                    >
                      =
                    </span>
                    <span
                      class="token punctuation"
                    >
                      "
                    </span>
                    page
                    <span
                      class="token punctuation"
                    >
                      "
                    </span>
                  </span>
                   
                  <span
                    class="token attr-name"
                  >
                    sub
                  </span>
                  <span
                    class="token attr-value"
                  >
                    <span
                      class="token punctuation"
                    >
                      =
                    </span>
                    <span
                      class="token punctuation"
                    >
                      "
                    </span>
                    With a sub
                    <span
                      class="token punctuation"
                    >
                      "
                    </span>
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
                page type
              
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Heading
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
            
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    Holder
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                <span
                  class="token plain-text"
                >
                  
          
                </span>
                <span
                  class="token tag"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token punctuation"
                    >
                      &lt;/
                    </span>
                    div
                  </span>
                  <span
                    class="token punctuation"
                  >
                    &gt;
                  </span>
                </span>
                

                <span
                  class="token punctuation"
                >
                  )
                </span>
                <span
                  class="token punctuation"
                >
                  )
                </span>
                <span
                  class="token punctuation"
                >
                  ;
                </span>
                

              </code>
            </pre>
          </div>
        </div>
      </div>
      <div
        class="simplebar-placeholder"
      />
    </div>
    <div
      class="simplebar-track simplebar-horizontal"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
    <div
      class="simplebar-track simplebar-vertical"
    >
      <div
        class="simplebar-scrollbar"
      />
    </div>
  </div>
</div>
`;
